GNOME Bugzilla – Bug 691304
Heavy memory leak in UPnP AV Control Point
Last modified: 2019-02-22 05:57:35 UTC
Created attachment 232914 [details] [review] Patch fixing the memory leak When browsing a media server the AV Control-Point causes massive memory leakeage. The Problem is located playlist_treeview.c, compare_container(...). The container_id should also be freed, if is_container==false (see patch attached). This function is called very offen when browsing media servers with some more items/containers. For me me gupnp-av-cp uses 1,4GB memory after Browsing a music folder.
Pushed with slight coding style fix. Thanks.