Fixed memory leak in compare_container(...)

https://bugzilla.gnome.org/show_bug.cgi?id=691304